--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "cypress": "8.0.0",
     "vue": "^3.0.0",
     "vue-query": "1.8.0",
     "vue-router": "^4.0.0-0"
