--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "msw-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Frank van Wijk <info@frankvanwijk.nl>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,10 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "cypress": "8.0.0",
-    "vue": "^3.0.0",
-    "vue-query": "1.8.0",
-    "vue-router": "^4.0.0-0"
+    "msw": "0.32.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -32,14 +30,23 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "msw": "0.32.2",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
   },
+  "peerDependencies": {
+    "cypress": "8.0.0",
+    "vue": "^3.0.0",
+    "vue-query": "1.8.0",
+    "vue-router": "^4.0.0-0"
+  },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "files": [
+    "src/msw-ui.ts",
+    "src/components/MSW-UI.vue"
+  ]
 }
