--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
-  "name": "msw-ui",
   "version": "0.1.0",
-  "private": false,
-  "author": "Frank van Wijk <info@frankvanwijk.nl>",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "cypress:open": "cypress open"
+  "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
   },
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "msw-ui",
+  "author": "Frank van Wijk <info@frankvanwijk.nl>",
+  "module": "dist/msw-ui.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/msw-ui.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/msw-ui.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "dependencies": {
-    "core-js": "^3.6.5",
-    "msw": "0.32.2"
+    "msw": "0.33.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
-  },
-  "peerDependencies": {
-    "cypress": "8.0.0",
-    "vue": "^3.0.0",
-    "vue-query": "1.8.0",
-    "vue-router": "^4.0.0-0"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  },
-  "files": [
-    "src/msw-ui.ts",
-    "src/components/MSW-UI.vue"
-  ],
-  "main": "src/msw-ui.ts"
+    "@size-limit/preset-small-lib": "5.0.1",
+    "husky": "7.0.1",
+    "size-limit": "5.0.1",
+    "tsdx": "0.14.1",
+    "tslib": "2.3.0",
+    "typescript": "4.3.5"
+  }
 }
