Use setScenario in UI from within library

--- a/example-angular/projects/msw-ui-angular/package.json
+++ b/example-angular/projects/msw-ui-angular/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.1.0-",
-    "@angular/core": "^12.1.0-"
+    "@angular/core": "^12.1.0-",
+    "msw-ui": ">=0.5"
   },
   "dependencies": {
     "tslib": "^2.2.0"
